<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/login_back">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo2"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/mail3"
        android:hint="@string/username"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:textColor="#ffffff"
        android:layout_marginTop="25dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/ResetBTN"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textColor="@color/black" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingRight="20dp"
            android:text="@string/forgetPassword"
            android:textColor="#ffffff" />
        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/register"/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_reset"
        android:visibility="invisible"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>